--- a/public/css/login.css
+++ b/public/css/login.css
@@ -27,7 +27,7 @@ body {
   font-weight: 200;
   overflow: hidden;
   position: absolute;
-  font: center;
+  text-align: center;
   border-radius: 2px;
   letter-spacing: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -239,6 +239,7 @@ body {
   font-size: 24px;
   font-weight: 200;
   margin-top: 250px;
+  margin-left: -200px;
   overflow: hidden;
   position: relative;
   border-radius: 2px;
