--- a/public/css/wall.css
+++ b/public/css/wall.css
@@ -18,7 +18,7 @@ body {
 .container {
     height: 100%;
     /* overflow: hidden; */
-    margin-top: 50px;
+    margin-top: 70px;
 }
 
 /* Wall Cards */
@@ -62,7 +62,7 @@ body {
 #myProfile.card {
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 90%;
+    /* height: 90%; */
 }
 
 .myProfilePic {
