--- a/public/css/loginpage.css
+++ b/public/css/loginpage.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *:before,
 *:after {
   margin: 0;
@@ -385,4 +385,4 @@ body {
   -webkit-transform: translateY(-20px);
   transform: translateY(-20px);
 }
-
+ */
